--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,11 @@
 CC = gcc
 CFLAGS = -Wall -Werror -g
+LDFLAGS = -lreadline
 
 all: main
 
 main: main.c
-	$(CC) $(CFLAGS) -o main main.c
+	$(CC) $(CFLAGS) $(LDFLAGS) -o main main.c
 
 run: main
 	./main
