It works again for Linux

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,10 @@
 CC = gcc
 CFLAGS = -Wall -Werror -g
-LDFLAGS = -lreadline
 
 all: main
 
 main: main.c
-	$(CC) $(CFLAGS) $(LDFLAGS) -o main main.c
+	$(CC) $(CFLAGS) main.c -o main -lpthread -lreadline
 
 run: main
 	./main
@@ -15,3 +14,4 @@ debug: main
 
 clean:
 	rm -f main
+
